--- a/app/src/main/res/layout/fragment_user_data.xml
+++ b/app/src/main/res/layout/fragment_user_data.xml
@@ -1,205 +1,231 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.user_data.user_dataFragment">
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	tools:context=".ui.user_data.user_dataFragment">
+
 	<ScrollView
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
+		android:layout_height="wrap_content"
 		tools:ignore="UselessParent">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="16dp"
-        tools:ignore="ScrollViewSize,UselessParent">
 
-        <TextView
-            android:id="@+id/textViewTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="會員中心"
-            android:textSize="45sp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="16dp"
-            android:textStyle="bold"
-            tools:ignore="HardcodedText" />
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:orientation="vertical"
+			android:padding="16dp"
+			tools:ignore="ScrollViewSize,UselessParent">
 
+			<TextView
+				android:id="@+id/textViewTitle"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="會員中心"
+				android:textSize="45sp"
+				android:layout_gravity="center_horizontal"
+				android:layout_marginBottom="16dp"
+				android:textStyle="bold"
+				tools:ignore="HardcodedText" />
 
-	    <ImageView
-		    android:id="@+id/image_user"
-		    android:layout_width="380dp"
-		    android:layout_height="wrap_content"
-		    android:layout_centerHorizontal="true"
-		    android:layout_marginBottom="24dp"
-		    android:src="@drawable/user"
-		    tools:ignore="ContentDescription,ObsoleteLayoutParam" />
-	    <!-- 用戶名稱 -->
-	    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:orientation="horizontal">
+			<ImageView
+				android:id="@+id/image_user"
+				android:layout_width="380dp"
+				android:layout_height="wrap_content"
+				android:layout_centerHorizontal="true"
+				android:layout_marginBottom="24dp"
+				android:src="@drawable/user"
+				tools:ignore="ContentDescription,ObsoleteLayoutParam" />
 
-            <TextView
-                android:id="@+id/textViewUsername"
-                android:layout_width="130dp"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="用戶名稱"
-                tools:ignore="HardcodedText" />
+			<!-- 用戶名稱 -->
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/editTextUsername"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:hint="輸入用戶名稱"
-                tools:ignore="Autofill,HardcodedText,TextFields" />
-        </LinearLayout>
+				<TextView
+					android:id="@+id/textViewUsername"
+					android:layout_width="130dp"
+					android:layout_height="wrap_content"
+					android:textSize="20sp"
+					android:text="用戶名稱"
+					tools:ignore="HardcodedText" />
 
-        <!-- 電子郵件 -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:orientation="horizontal">
+				<EditText
+					android:id="@+id/editTextUsername"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:textSize="20sp"
+					android:hint="輸入用戶名稱"
+					android:imeOptions="actionNext"
+					android:inputType="text"
+					tools:ignore="Autofill,HardcodedText,TextFields" />
+			</LinearLayout>
 
-            <TextView
-                android:id="@+id/textViewEmail"
-                android:layout_width="130dp"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="電子郵件"
-                tools:ignore="HardcodedText"/>
+			<!-- 電子郵件 -->
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/editTextEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:hint="輸入電子郵件"
-                tools:ignore="Autofill,HardcodedText,TextFields"/>
-        </LinearLayout>
+				<TextView
+					android:id="@+id/textViewEmail"
+					android:layout_width="130dp"
+					android:layout_height="wrap_content"
+					android:textSize="20sp"
+					android:text="電子郵件"
+					tools:ignore="HardcodedText" />
 
-        <!-- 電話號碼 -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:orientation="horizontal">
+				<EditText
+					android:id="@+id/editTextEmail"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:textSize="20sp"
+					android:hint="輸入電子郵件"
+					android:imeOptions="actionNext"
+					android:inputType="text"
+					tools:ignore="Autofill,HardcodedText,TextFields" />
+			</LinearLayout>
 
-            <TextView
-                android:id="@+id/textViewPhone"
-                android:layout_width="130dp"
-                android:layout_height="wrap_content"
-                android:text="電話號碼"
-                android:textSize="20sp"
-                tools:ignore="HardcodedText" />
+			<!-- 電話號碼 -->
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/editTextPhone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:hint="輸入電話號碼"
-                android:inputType="phone"
-                tools:ignore="Autofill,HardcodedText"/>
+				<TextView
+					android:id="@+id/textViewPhone"
+					android:layout_width="130dp"
+					android:layout_height="wrap_content"
+					android:text="電話號碼"
+					android:textSize="20sp"
+					tools:ignore="HardcodedText" />
 
-        </LinearLayout>
+				<EditText
+					android:id="@+id/editTextPhone"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:textSize="20sp"
+					android:hint="輸入電話號碼"
+					android:imeOptions="actionNext"
+					android:inputType="phone"
+					tools:ignore="Autofill,HardcodedText" />
 
-        <!-- 地址 -->
+			</LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:orientation="horizontal">
+			<!-- 地址 -->
 
-            <TextView
-                android:id="@+id/textViewAddress"
-                android:layout_width="130dp"
-                android:layout_height="wrap_content"
-                android:text="地址"
-                android:textSize="20sp"
-                tools:ignore="HardcodedText" />
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/editTextAddress"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:hint="輸入地址"
-                tools:ignore="Autofill,HardcodedText,TextFields"/>
+				<TextView
+					android:id="@+id/textViewAddress"
+					android:layout_width="130dp"
+					android:layout_height="wrap_content"
+					android:text="地址"
+					android:textSize="20sp"
+					tools:ignore="HardcodedText" />
 
-        </LinearLayout>
+				<EditText
+					android:id="@+id/editTextAddress"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:textSize="20sp"
+					android:hint="輸入地址"
+					android:imeOptions="actionDone"
+					android:inputType="text"
+					tools:ignore="Autofill,HardcodedText,TextFields" />
 
-        <!-- 緊急聯絡人 -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+			</LinearLayout>
 
-            <TextView
-                android:id="@+id/textViewEmergencyContact"
-                android:layout_width="130dp"
-                android:layout_height="wrap_content"
-                android:text="緊急聯絡人"
-                android:textSize="20sp"
-                tools:ignore="HardcodedText" />
+			<!-- 緊急聯絡人 -->
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:orientation="horizontal">
 
-	        <Button
-		        android:id="@+id/button_EmergencyContact"
-		        android:layout_width="wrap_content"
-		        android:layout_height="50dp"
-		        android:background="@drawable/color"
-		        android:text="新增緊急聯絡人"
-		        android:textSize="20sp"
-		        tools:ignore="HardcodedText" />
-        </LinearLayout>
+				<TextView
+					android:id="@+id/textViewEmergencyContact"
+					android:layout_width="130dp"
+					android:layout_height="wrap_content"
+					android:text="緊急聯絡人"
+					android:textSize="20sp"
+					tools:ignore="HardcodedText" />
 
-	    <!-- 事件列表 -->
-	    <LinearLayout
-		    android:layout_width="match_parent"
-		    android:layout_height="match_parent"
-		    android:layout_marginTop="10dp"
-		    android:orientation="vertical">
+				<Button
+					android:id="@+id/button_EmergencyContact"
+					android:layout_width="wrap_content"
+					android:layout_height="50dp"
+					android:background="@drawable/color"
+					android:text="新增緊急聯絡人"
+					android:textSize="20sp"
+					tools:ignore="HardcodedText" />
+			</LinearLayout>
 
-		    <TextView
-			    android:id="@+id/eventTextView_0"
-			    android:layout_width="match_parent"
-			    android:layout_height="match_parent"
-			    android:text=""
-			    android:layout_marginTop="10dp"
-			    android:textSize="16sp"
-			    tools:ignore="MissingConstraints" />
+			<!-- 事件列表 -->
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginTop="10dp"
+				android:orientation="vertical">
 
-		    <TextView
-			    android:id="@+id/eventTextView_1"
-			    android:layout_width="match_parent"
-			    android:layout_height="match_parent"
-			    android:text=""
-			    android:layout_marginTop="10dp"
-			    android:textSize="16sp"
-			    tools:ignore="MissingConstraints" />
+				<TextView
+					android:id="@+id/eventTextView0"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text=""
+					android:layout_marginTop="10dp"
+					android:textSize="16sp"
+					tools:ignore="MissingConstraints" />
 
-		    <TextView
-			    android:id="@+id/eventTextView_2"
-			    android:layout_width="match_parent"
-			    android:layout_height="match_parent"
-			    android:text=""
-			    android:layout_marginTop="10dp"
-			    android:textSize="16sp"
-			    tools:ignore="MissingConstraints" />
-	    </LinearLayout>
+				<TextView
+					android:id="@+id/eventTextView1"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text=""
+					android:layout_marginTop="10dp"
+					android:textSize="16sp"
+					tools:ignore="MissingConstraints" />
 
-	    <Button
-		    android:id="@+id/button_data_save"
-		    android:layout_width="350dp"
-		    android:layout_height="50dp"
-		    android:layout_marginTop="10dp"
-		    android:background="@drawable/color"
-		    android:text="保存"
-		    android:textSize="20sp"
-		    tools:ignore="HardcodedText" />
+				<TextView
+					android:id="@+id/eventTextView2"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text=""
+					android:layout_marginTop="10dp"
+					android:textSize="16sp"
+					tools:ignore="MissingConstraints" />
+			</LinearLayout>
 
-        </LinearLayout>
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:orientation="horizontal">
+
+				<Button
+					android:id="@+id/button_data_save"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					android:layout_marginTop="10dp"
+					android:background="@drawable/color"
+					android:text="保存"
+					android:textSize="20sp"
+					tools:ignore="ButtonStyle,HardcodedText" />
+
+				<Button
+					android:id="@+id/button_Cancel"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					android:layout_marginTop="10dp"
+					android:background="@drawable/color"
+					android:text="@string/delete"
+					android:textSize="20sp"
+					tools:ignore="ButtonStyle,HardcodedText" />
+			</LinearLayout>
+		</LinearLayout>
 	</ScrollView>
 </FrameLayout>
