--- a/app/src/main/res/layout/fragment_calender_thing.xml
+++ b/app/src/main/res/layout/fragment_calender_thing.xml
@@ -1,171 +1,202 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.calender_thing.CalenderThingFragment">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:ignore="UselessParent">
+	<androidx.constraintlayout.widget.ConstraintLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		tools:context=".ui.calender_thing.CalenderThingFragment">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+		<TextView
+			android:id="@+id/textView_calender_thing"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginEnd="28dp"
+			android:text="@string/Calender_thing"
+			android:textSize="50sp"
+			app:layout_constraintEnd_toEndOf="parent"
+			tools:ignore="MissingConstraints"
+			tools:layout_editor_absoluteY="7dp" />
 
-            <TextView
-                android:id="@+id/textView_calender_thing"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="28dp"
-                android:text="@string/Calender_thing"
-                android:textSize="50sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="7dp" />
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:orientation="vertical"
+			android:padding="16dp"
+			app:layout_constraintTop_toBottomOf="@id/textView_calender_thing">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="16dp"
-                android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@id/textView_calender_thing">
+			<EditText
+				android:id="@+id/editText_thing"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginBottom="5dp"
+				android:hint="@string/thing_name"
+				android:textSize="20sp"
+				android:imeOptions="actionNext"
+				tools:ignore="Autofill,MissingPrefix,TextFields" />
 
-                <!-- 事件名稱 -->
-                <EditText
-                    android:id="@+id/editText_thing"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginBottom="5dp"
-                    android:textSize="20sp"
-                    android:hint="@string/thing_name"
-                    tools:ignore="Autofill,TextFields" />
+			<!-- 選擇事件起始日期的彈跳視窗 -->
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:orientation="horizontal">
 
-                <!-- 選擇事件起始日期的 Spinner -->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+				<TextView
+					android:layout_width="100dp"
+					android:layout_height="50dp"
+					android:textSize="20sp"
+					android:text="@string/start_day"
+					android:clickable="true"
+					android:focusable="true" />
 
-                    <TextView
-                        android:layout_width="100dp"
-                        android:layout_height="50dp"
-                        android:textSize="20sp"
-                        android:text="@string/start_day"
-                        android:clickable="true"
-                        android:focusable="true" />
+				<EditText
+					android:id="@+id/editTextStartDate"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="8dp"
+					android:hint="選擇的開始日期"
+					android:imeOptions="actionNext"
+					android:textSize="20sp"
+					android:inputType="none"
+					android:focusable="false"
+					android:onClick="showStartDatePickerDialog"
+					tools:ignore="Autofill,HardcodedText,TextFields" />
 
-                    <DatePicker
-                        android:id="@+id/datePickerStartDate"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:calendarViewShown="false"
-                        android:datePickerMode="spinner" />
-                </LinearLayout>
+			</LinearLayout>
 
-                <!-- 選擇事件結束日期的 Spinner -->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:layout_width="100dp"
-                        android:layout_height="50dp"
-                        android:textSize="20sp"
-                        android:text="@string/end_day"
-                        android:clickable="true"
-                        android:focusable="true" />
+			<!-- 選擇事件結束日期的彈跳視窗 -->
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:orientation="horizontal">
+				<TextView
+					android:layout_width="100dp"
+					android:layout_height="50dp"
+					android:textSize="20sp"
+					android:text="@string/end_day"
+					android:clickable="true"
+					android:focusable="true" />
 
-                    <DatePicker
-                        android:id="@+id/datePickerEndDate"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:calendarViewShown="false"
-                        android:datePickerMode="spinner" />
-                </LinearLayout>
+				<EditText
+					android:id="@+id/editTextEndDate"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="8dp"
+					android:hint="選擇的結束日期"
+					android:imeOptions="actionNext"
+					android:textSize="20sp"
+					android:inputType="none"
+					android:focusable="false"
+					android:onClick="showEndDatePickerDialog"
+					tools:ignore="Autofill,HardcodedText,TextFields" />
 
-                <!-- 選擇事件起始時間的 Spinner -->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+			</LinearLayout>
 
-                    <TextView
-                        android:layout_width="100dp"
-                        android:layout_height="50dp"
-                        android:textSize="20sp"
-                        android:text="@string/start_time"
-                        android:clickable="true"
-                        android:focusable="true" />
+			<!-- 選擇事件起始時間的彈跳視窗 -->
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:orientation="horizontal">
 
-                    <TimePicker
-                        android:id="@+id/timePickerStartTime"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                </LinearLayout>
+				<TextView
+					android:layout_width="100dp"
+					android:layout_height="50dp"
+					android:textSize="20sp"
+					android:text="@string/start_time"
+					android:clickable="true"
+					android:focusable="true" />
 
-                <!-- 選擇事件結束時間的 Spinner -->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+				<EditText
+					android:id="@+id/editTextStartTime"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="8dp"
+					android:hint="選擇的開始時間"
+					android:imeOptions="actionNext"
+					android:textSize="20sp"
+					android:inputType="none"
+					android:focusable="false"
+					android:onClick="showStartTimePickerDialog"
+					tools:ignore="Autofill,HardcodedText,TextFields" />
+			</LinearLayout>
 
-                    <TextView
-                        android:layout_width="100dp"
-                        android:layout_height="50dp"
-                        android:textSize="20sp"
-                        android:text="@string/end_time"
-                        android:clickable="true"
-                        android:focusable="true" />
+			<!-- 選擇事件結束時間的彈跳視窗 -->
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:orientation="horizontal">
 
-                    <TimePicker
-                        android:id="@+id/timePickerEndTime"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                </LinearLayout>
+				<TextView
+					android:layout_width="100dp"
+					android:layout_height="50dp"
+					android:textSize="20sp"
+					android:text="@string/end_time"
+					android:clickable="true"
+					android:focusable="true" />
 
-                <!-- 事件對象 -->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+				<EditText
+					android:id="@+id/editTextEndTime"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="8dp"
+					android:hint="選擇的結束時間"
+					android:imeOptions="actionNext"
+					android:textSize="20sp"
+					android:inputType="none"
+					android:focusable="false"
+					android:onClick="showEndTimePickerDialog"
+					tools:ignore="Autofill,HardcodedText,TextFields" />
 
-                    <TextView
-                        android:layout_width="100dp"
-                        android:layout_height="40dp"
-                        android:textSize="20sp"
-                        android:text="@string/thing_people" />
+			</LinearLayout>
 
-                    <Spinner
-                        android:id="@+id/spinnerCompanions"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp" />
-                </LinearLayout>
+			<!-- 事件對象 -->
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:orientation="horizontal">
 
-                <!-- 事件輸入 -->
-                <EditText
-                    android:id="@+id/editTextEventDescription"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:textSize="20sp"
-                    android:hint="@string/thing_illustrate"
-                    tools:ignore="Autofill,TextFields" />
+				<TextView
+					android:layout_width="100dp"
+					android:layout_height="40dp"
+					android:textSize="20sp"
+					android:text="@string/thing_people" />
 
-                <Button
-                    android:id="@+id/saveButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="20sp"
-                    android:text="@string/thing_save" />
+				<Spinner
+					android:id="@+id/spinnerCompanions"
+					android:layout_width="match_parent"
+					android:layout_height="50dp" />
+			</LinearLayout>
 
-            </LinearLayout>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
-</FrameLayout>
+			<!-- 事件輸入 -->
+			<EditText
+				android:id="@+id/editTextEventDescription"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginTop="8dp"
+				android:layout_marginBottom="8dp"
+				android:textSize="20sp"
+				android:imeOptions="actionDone"
+				android:hint="@string/thing_illustrate"
+				tools:ignore="Autofill,TextFields" />
+
+			<Button
+				android:id="@+id/saveButton"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:textSize="20sp"
+				android:text="@string/thing_save" />
+
+			<Button
+				android:id="@+id/no_save_button"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:textSize="20sp"
+				android:text="@string/delete"
+				tools:ignore="HardcodedText" />
+
+		</LinearLayout>
+	</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
