--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -34,8 +34,10 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:hint="@string/user_name"
+	            android:inputType="text"
+	            android:imeOptions="actionNext"
                 android:textSize="20sp"
-                tools:ignore="Autofill,HardcodedText,LabelFor,RtlCompat,TextFields" />
+	            tools:ignore="Autofill,HardcodedText,LabelFor,RtlCompat,TextFields" />
 
             <EditText
                 android:id="@+id/password"
@@ -44,10 +46,21 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="19dp"
                 android:hint="@string/password"
+	            android:inputType="textPassword"
+	            android:imeOptions="actionNext"
                 android:textSize="20sp"
-                android:inputType="textPassword"
                 tools:ignore="Autofill,HardcodedText,LabelFor,RtlCompat" />
-
+	        <EditText
+		        android:id="@+id/password_check"
+		        android:layout_width="match_parent"
+		        android:layout_height="60dp"
+		        android:layout_marginStart="10dp"
+		        android:layout_marginTop="19dp"
+		        android:hint="@string/password_check"
+		        android:inputType="textPassword"
+		        android:imeOptions="actionNext"
+		        android:textSize="20sp"
+		        tools:ignore="Autofill,HardcodedText,LabelFor,RtlCompat" />
             <EditText
                 android:id="@+id/real_name"
                 android:layout_width="match_parent"
@@ -55,17 +68,21 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="19dp"
                 android:hint="@string/real_name"
+	            android:inputType="text"
+	            android:imeOptions="actionNext"
                 android:textSize="20sp"
                 tools:ignore="Autofill,HardcodedText,LabelFor,RtlCompat,TextFields" />
-            <EditText
+
+	        <EditText
                 android:id="@+id/phone"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="19dp"
                 android:hint="@string/phone"
+		        android:inputType="date"
+	            android:imeOptions="actionNext"
                 android:textSize="20sp"
-                android:inputType="date"
                 tools:ignore="Autofill,HardcodedText,LabelFor,RtlCompat,TextFields" />
 
             <EditText
@@ -75,8 +92,9 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="19dp"
                 android:hint="@string/mail"
+	            android:inputType="textEmailAddress"
+	            android:imeOptions="actionNext"
                 android:textSize="20sp"
-                android:inputType="textEmailAddress"
                 tools:ignore="Autofill,HardcodedText,LabelFor,RtlCompat" />
             <EditText
                 android:id="@+id/home"
@@ -85,33 +103,35 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="19dp"
                 android:hint="@string/address"
+	            android:inputType="text"
+	            android:imeOptions="actionDone"
                 android:textSize="20sp"
-                android:inputType="text"
                 tools:ignore="Autofill,HardcodedText,LabelFor,RtlCompat,TextFields" />
 
-            <EditText
-                android:id="@+id/birthday"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="19dp"
-                android:hint="@string/birthday_vid"
-                android:textSize="20sp"
-                android:inputType="date"
-                tools:ignore="Autofill,HardcodedText,LabelFor,RtlCompat" />
+	        <TextView
+		        android:id="@+id/birthday"
+		        android:layout_width="match_parent"
+		        android:layout_height="60dp"
+		        android:layout_marginStart="10dp"
+		        android:layout_marginTop="19dp"
+		        android:hint="@string/birthday_vid"
+		        android:gravity="center_vertical"
+		        android:textSize="20sp"
+		        tools:ignore="Autofill,HardcodedText,LabelFor,RtlCompat"
+		        android:clickable="true"
+		        android:focusable="false" />
+
 
             <Button
                 android:id="@+id/registerButton"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginStart="10dp"
-                android:background="@drawable/color_3"
-                android:layout_marginTop="10dp"
+	            android:background="@drawable/color"
+                android:layout_marginTop="20dp"
                 android:text="@string/registration"
                 android:textSize="20sp"
-                tools:ignore="HardcodedText" />
-
-
+                tools:ignore="HardcodedText,TextViewEdits" />
         </LinearLayout>
     </FrameLayout>
 </ScrollView>
