--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -44,6 +44,9 @@
         <action
             android:id="@+id/nav_medicine_allbox"
             app:destination="@id/nav_medicine_allbox" />
+	    <action
+		    android:id="@+id/action_nav_medicine_to_medicine_inquire"
+		    app:destination="@id/medicine_inquire" />
     </fragment>
     <fragment
         android:id="@+id/nav_login"
@@ -144,4 +147,9 @@
         android:name="com.example.myapplication.ui.forget_password.forget_password"
         android:label="@string/menu_forget_password"
         tools:layout="@layout/fragment_forget_password" />
+	<fragment
+		android:id="@+id/medicine_inquire"
+		android:name="com.example.myapplication.medicine_inquire"
+		android:label="fragment_medicine_inquire"
+		tools:layout="@layout/fragment_medicine_inquire" />
 </navigation>
