--- a/app/src/main/res/layout/fragment_medicine_allbox.xml
+++ b/app/src/main/res/layout/fragment_medicine_allbox.xml
@@ -36,7 +36,7 @@
             android:id="@+id/medicine_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
+            tools:listitem="@layout/item_medicine_box" />
 
     </androidx.core.widget.NestedScrollView>
 
