--- a/app/src/main/res/layout/fragment_calender.xml
+++ b/app/src/main/res/layout/fragment_calender.xml
@@ -8,18 +8,21 @@
     tools:context=".ui.Calender.CalenderFragment" >
 
     <!-- DatePicker -->
+
+	<!-- 事件列表 -->
+
 	<DatePicker
 		android:id="@+id/datePicker"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_marginTop="24dp"
 		android:headerBackground="#123456"
 		android:padding="0dp"
 		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias="0.491"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
 		tools:ignore="MissingConstraints,RtlCompat" />
-
-	<!-- 事件列表 -->
 
 	<com.google.android.material.floatingactionbutton.FloatingActionButton
 		android:id="@+id/fabAddEvent"
@@ -39,9 +42,9 @@
 		android:layout_height="0dp"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintHorizontal_bias="0.0"
+		app:layout_constraintHorizontal_bias="1.0"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/datePicker"
+		app:layout_constraintTop_toBottomOf="@+id/fabAddEvent"
 		app:layout_constraintVertical_bias="1.0">
 
 		<TextView
