--- a/app/src/main/res/layout/fragment_medicine_inquire.xml
+++ b/app/src/main/res/layout/fragment_medicine_inquire.xml
@@ -3,21 +3,11 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".medicine_inquire">
+	tools:context=".ui.Medicine_inquire.medicine_inquire">
 
 	<TextView
-		android:id="@+id/text_medicine_end"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_marginStart="8dp"
-		android:layout_marginTop="8dp"
-		android:layout_marginEnd="8dp"
-		android:textAlignment="center"
-		android:text="藥物查詢結果"
-		android:textSize="45sp"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		tools:ignore="HardcodedText" />
+		android:layout_height="match_parent"
+		android:text="Hello" />
 
 </FrameLayout>
