--- a/app/src/main/res/layout/fragment_medicine_inquire.xml
+++ b/app/src/main/res/layout/fragment_medicine_inquire.xml
@@ -1,13 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	tools:context=".ui.Medicine_inquire.medicine_inquire">
 
 	<TextView
+		android:id="@+id/text_medicine_inquire_end"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:text="Hello" />
+		android:layout_height="wrap_content"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="8dp"
+		android:layout_marginEnd="8dp"
+		android:textAlignment="center"
+		android:text="藥物查詢結果"
+		android:textSize="45sp"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		tools:ignore="HardcodedText" />
 
-</FrameLayout>
+	<!-- 使用 NestedScrollView 包裹 RecyclerView 和文字部分 -->
+	<androidx.core.widget.NestedScrollView
+		android:layout_width="match_parent"
+		android:layout_height="0dp"
+		app:layout_constraintTop_toBottomOf="@id/text_medicine_inquire_end"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintBottom_toBottomOf="parent">
+
+		<!-- 藥品列表 -->
+		<androidx.recyclerview.widget.RecyclerView
+			android:id="@+id/medicine_list"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			/>
+	</androidx.core.widget.NestedScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
