20240528-登入登出成功

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:text="設定"
-        tools:ignore="HardcodedText"
-        app:destination="@id/nav_user_set"/>
+        tools:ignore="HardcodedText"/>
 
     <item
         android:id="@+id/nav_mail_for_developer"
@@ -21,6 +20,5 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:text="寄信給開發者"
-        tools:ignore="HardcodedText"
-        app:destination="@id/nav_user_set"/>
+        tools:ignore="HardcodedText" />
 </menu>
