--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,7 +22,7 @@
 			tools:ignore="HardcodedText" />
 		<item
 			android:id="@+id/nav_logout"
-			android:icon="@android:drawable/ic_menu_close_clear_cancel"
+			android:icon="@android:drawable/ic_menu_set_as"
 			android:title="@string/menu_logout"
 			android:layout_width="match_parent"
 			android:layout_height="40dp"
