--- a/app/src/main/res/layout/fragment_calender_thing.xml
+++ b/app/src/main/res/layout/fragment_calender_thing.xml
@@ -8,7 +8,7 @@
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		tools:context=".ui.calender_thing.CalenderThingFragment">
+		tools:context=".ui.Calender.CalenderThingFragment">
 
 		<TextView
 			android:id="@+id/textView_calender_thing"
