--- a/app/src/main/res/layout/fragment_calender.xml
+++ b/app/src/main/res/layout/fragment_calender.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:id="@+id/swipeRefreshLayout"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	tools:context=".ui.Calender.CalenderFragment">
+	android:layout_height="match_parent">
+
+	<ScrollView
+		android:id="@+id/scrollView"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:fillViewport="true"
+		tools:context=".ui.Calender.CalenderFragment">
 
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent">
+		android:layout_height="wrap_content">
 
 		<!-- DatePicker -->
 		<DatePicker
@@ -47,4 +53,6 @@
 			app:layout_constraintTop_toBottomOf="@+id/fabAddEvent" />
 
 	</androidx.constraintlayout.widget.ConstraintLayout>
+	</ScrollView>
+
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
