--- a/app/src/main/res/layout/fragment_emergency_contact.xml
+++ b/app/src/main/res/layout/fragment_emergency_contact.xml
@@ -15,7 +15,7 @@
 		<TextView
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:text="@string/Emergency_contact_information"
+			android:text="緊急連絡人修改"
 			android:textSize="45sp"
 			android:textStyle="bold"
 			android:gravity="center"
