--- a/app/src/main/res/layout/fragment_medicine_box.xml
+++ b/app/src/main/res/layout/fragment_medicine_box.xml
@@ -22,22 +22,19 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
 
-    <!-- 使用 NestedScrollView 包裹 RecyclerView 和文字部分 -->
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/text_medicine_box"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+	<androidx.core.widget.NestedScrollView
+		android:layout_width="match_parent"
+		android:layout_height="0dp"
+		app:layout_constraintTop_toBottomOf="@id/text_medicine_box"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintBottom_toBottomOf="parent">
 
-        <!-- 藥品列表 -->
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/medicine_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-             />
+		<androidx.recyclerview.widget.RecyclerView
+			android:id="@+id/medicine_list"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content" />
 
-    </androidx.core.widget.NestedScrollView>
+	</androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
