--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -4,19 +4,124 @@
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:orientation="horizontal"
-	android:padding="8dp">
-
-	<TextView
-		android:id="@+id/tvEventName"
-		android:layout_width="600dp"
-		android:layout_height="wrap_content"
-		android:layout_weight="1"
-		android:lines="7"
-		android:textSize="16sp"
-		tools:ignore="InefficientWeight" />
+	android:padding="8dp"
+	tools:context=".ui.Calender.EventAdapter">
 
 	<LinearLayout
-		android:layout_width="match_parent"
+		android:layout_width="150dp"
+		android:layout_height="match_parent"
+		android:layout_weight="1"
+		android:orientation="vertical">
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="50dp"
+			android:orientation="horizontal">
+
+			<TextView
+				android:id="@+id/EventName"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginBottom="8dp"
+				android:text="事件說明:"
+				android:textColor="#000"
+				android:textSize="16sp"
+				android:textStyle="bold" />
+
+			<TextView
+				android:id="@+id/tvEventName"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginBottom="8dp"
+				android:text=""
+				android:textColor="#000"
+				android:textSize="16sp"
+				android:textStyle="bold" />
+		</LinearLayout>
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="60dp"
+			android:orientation="horizontal">
+
+			<TextView
+				android:id="@+id/StartDate"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginBottom="8dp"
+				android:text="開始日期:"
+				android:textColor="#000"
+				android:textSize="16sp"
+				android:textStyle="bold" />
+
+			<TextView
+				android:id="@+id/tvStartDate"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginBottom="8dp"
+				android:text=""
+				android:textColor="#000"
+				android:textSize="16sp"
+				android:textStyle="bold" />
+
+		</LinearLayout>
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="60dp"
+			android:orientation="horizontal">
+
+			<TextView
+				android:id="@+id/EndDate"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginBottom="8dp"
+				android:text="結束日期:"
+				android:textColor="#000"
+				android:textSize="16sp"
+				android:textStyle="bold" />
+
+			<TextView
+				android:id="@+id/tvEndDate"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginBottom="8dp"
+				android:text=""
+				android:textColor="#000"
+				android:textSize="16sp"
+				android:textStyle="bold" />
+
+		</LinearLayout>
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="50dp"
+			android:orientation="horizontal">
+
+			<TextView
+				android:id="@+id/Companions"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginBottom="8dp"
+				android:text="陪同人員:"
+				android:textColor="#000"
+				android:textSize="16sp" />
+
+			<TextView
+				android:id="@+id/tvCompanions"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginBottom="8dp"
+				android:text=""
+				android:textColor="#000"
+				android:textSize="16sp" />
+
+		</LinearLayout>
+
+	</LinearLayout>
+
+	<LinearLayout
+		android:layout_width="0dp"
 		android:layout_height="match_parent"
 		android:layout_weight="1"
 		android:orientation="vertical">
@@ -24,18 +129,14 @@
 		<Button
 			android:id="@+id/btnEditEvent"
 			android:layout_width="wrap_content"
-			android:layout_height="65dp"
-			android:text="編輯"
-			android:textSize="14sp"
-			tools:ignore="HardcodedText" />
+			android:layout_height="110dp"
+			android:text="編輯" />
 
 		<Button
 			android:id="@+id/btnDeleteEvent"
 			android:layout_width="wrap_content"
-			android:layout_height="65dp"
-			android:text="刪除"
-			android:textSize="14sp"
-			tools:ignore="HardcodedText" />
+			android:layout_height="110dp"
+			android:text="刪除" />
 	</LinearLayout>
 
 </LinearLayout>
