--- a/app/src/main/res/layout/item_medicine.xml
+++ b/app/src/main/res/layout/item_medicine.xml
@@ -1,41 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content"
+	android:orientation="vertical"
+	android:padding="8dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:ignore="RedundantNamespace,ScrollViewSize">
+	<ImageView
+		android:id="@+id/medicine_image"
+		android:layout_width="200dp"
+		android:layout_height="200dp"
+		android:layout_weight="1"
+		android:src="@drawable/medicine_3" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="8dp"
-            tools:ignore="MissingConstraints,UseCompoundDrawables,UselessLeaf">
+	<TextView
+		android:id="@+id/medicine_name"
+		android:layout_width="200dp"
+		android:layout_height="wrap_content"
+		android:gravity="center"
+		android:text="大豐普樂非林錠 "
+		android:textSize="16sp"
+		tools:ignore="HardcodedText" />
 
-            <ImageView
-                android:id="@+id/item_image"
-                android:layout_width="78dp"
-                android:layout_height="87dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="5dp"
-                android:src="@drawable/images01"
-                tools:ignore="ContentDescription,MissingConstraints"/>
-
-            <TextView
-                android:id="@+id/item_text"
-                android:layout_width="315dp"
-                android:layout_height="87dp"
-                android:gravity="center_vertical"
-                android:layout_marginStart="5dp"
-                android:text="藥物名稱"
-                android:textSize="20sp"
-                tools:ignore="HardcodedText,MissingConstraints" />
-
-        </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+</LinearLayout>
