--- a/app/src/main/res/layout/fragment_emergency_contact.xml
+++ b/app/src/main/res/layout/fragment_emergency_contact.xml
@@ -28,7 +28,7 @@
 			android:layout_height="wrap_content"
 			android:layout_centerHorizontal="true"
 			android:layout_marginBottom="24dp"
-			android:src="@drawable/emergency"
+			android:src="@drawable/menu_emergency"
 			tools:ignore="ContentDescription,ObsoleteLayoutParam" />
 
 		<LinearLayout
