--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -30,7 +30,7 @@
 			android:layout_height="wrap_content"
 			android:layout_centerHorizontal="true"
 			android:layout_marginBottom="24dp"
-			android:src="@drawable/message"
+			android:src="@drawable/menu_message"
 			tools:ignore="ContentDescription,ObsoleteLayoutParam" />
 
 		<TextView
