--- a/app/src/main/res/layout/fragment_forget_password.xml
+++ b/app/src/main/res/layout/fragment_forget_password.xml
@@ -15,7 +15,7 @@
 			android:id="@+id/image_logo"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:src="@drawable/logo"
+			android:src="@drawable/menu_forget"
 			android:layout_centerHorizontal="true"
 			android:layout_marginBottom="24dp"
 			tools:ignore="ContentDescription" />
