--- a/app/src/main/res/layout/fragment_user_set.xml
+++ b/app/src/main/res/layout/fragment_user_set.xml
@@ -33,7 +33,7 @@
 		    android:layout_height="188dp"
 		    android:layout_centerHorizontal="true"
 		    android:layout_marginBottom="24dp"
-		    android:src="@drawable/set"
+		    android:src="@drawable/menu_set"
 		    tools:ignore="ContentDescription,ObsoleteLayoutParam" />
 
 	    <LinearLayout
