--- a/app/src/main/res/layout/fragment_calender.xml
+++ b/app/src/main/res/layout/fragment_calender.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:id="@+id/swipeRefreshLayout"
@@ -7,49 +8,55 @@
 	android:layout_height="match_parent"
 	tools:context=".ui.Calender.CalenderFragment">
 
-	<androidx.constraintlayout.widget.ConstraintLayout
+	<androidx.core.widget.NestedScrollView
 		android:layout_width="match_parent"
-		android:layout_height="match_parent">
+		android:layout_height="match_parent"
+		android:fillViewport="true">
 
-		<!-- DatePicker -->
-		<DatePicker
-			android:id="@+id/datePicker"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="16dp"
-			android:padding="0dp"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent"
-			tools:ignore="MissingConstraints,RtlCompat" />
+		<androidx.constraintlayout.widget.ConstraintLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content">
 
-		<!-- 事件列表 -->
+			<!-- DatePicker -->
 
-		<androidx.recyclerview.widget.RecyclerView
-			android:id="@+id/recyclerView"
-			android:layout_width="376dp"
-			android:layout_height="183dp"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintHorizontal_bias="1.0"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@id/datePicker"
-			app:layout_constraintVertical_bias="1.0" />
+			<!-- 事件列表 -->
 
-		<com.google.android.material.floatingactionbutton.FloatingActionButton
-			android:id="@+id/fabAddEvent"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_gravity="bottom|end"
-			android:layout_marginTop="8dp"
-			android:layout_marginEnd="16dp"
-			android:src="@android:drawable/ic_input_add"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintTop_toBottomOf="@id/datePicker"
-			app:layout_constraintVertical_bias="0.0"
-			tools:ignore="ContentDescription,MissingConstraints" />
+			<DatePicker
+				android:id="@+id/datePicker"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginTop="4dp"
+				android:padding="0dp"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintHorizontal_bias="0.655"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent"
+				tools:ignore="MissingConstraints,RtlCompat" />
 
-	</androidx.constraintlayout.widget.ConstraintLayout>
+			<androidx.recyclerview.widget.RecyclerView
+				android:id="@+id/recyclerView"
+				android:layout_width="346dp"
+				android:layout_height="241dp"
+				android:layout_marginTop="32dp"
+				android:minHeight="200dp"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintHorizontal_bias="0.615"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toBottomOf="@id/datePicker" />
+
+			<com.google.android.material.floatingactionbutton.FloatingActionButton
+				android:id="@+id/fabAddEvent"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_gravity="bottom|end"
+				android:layout_marginEnd="20dp"
+				android:layout_marginBottom="11dp"
+				android:src="@android:drawable/ic_input_add"
+				app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+				app:layout_constraintEnd_toEndOf="parent"
+				tools:ignore="ContentDescription,MissingConstraints" />
+
+		</androidx.constraintlayout.widget.ConstraintLayout>
+	</androidx.core.widget.NestedScrollView>
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
