--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -10,12 +10,13 @@
 	<LinearLayout
 		android:layout_width="150dp"
 		android:layout_height="match_parent"
+		android:layout_marginTop="5dp"
 		android:layout_weight="1"
 		android:orientation="vertical">
 
 		<LinearLayout
 			android:layout_width="match_parent"
-			android:layout_height="50dp"
+			android:layout_height="40dp"
 			android:orientation="horizontal">
 
 			<TextView
@@ -95,7 +96,7 @@
 
 		<LinearLayout
 			android:layout_width="match_parent"
-			android:layout_height="50dp"
+			android:layout_height="35dp"
 			android:orientation="horizontal">
 
 			<TextView
@@ -103,7 +104,7 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_marginBottom="8dp"
-				android:text="陪同人員:"
+				android:text="陪伴對象:"
 				android:textColor="#000"
 				android:textSize="16sp" />
 
@@ -117,12 +118,38 @@
 				android:textSize="16sp" />
 
 		</LinearLayout>
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="60dp"
+			android:orientation="horizontal">
+
+			<TextView
+				android:id="@+id/Eventthing"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginBottom="8dp"
+				android:text="事件詳情:"
+				android:textColor="#000"
+				android:textSize="16sp"
+				android:textStyle="bold" />
+
+			<TextView
+				android:id="@+id/tvEventthing"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginBottom="8dp"
+				android:text=""
+				android:textColor="#000"
+				android:textSize="16sp"
+				android:textStyle="bold" />
+		</LinearLayout>
 
 	</LinearLayout>
 
 	<LinearLayout
 		android:layout_width="0dp"
 		android:layout_height="match_parent"
+		android:layout_marginTop="5dp"
 		android:layout_weight="1"
 		android:orientation="vertical">
 
