--- a/app/src/main/res/layout/fragment_contact_list.xml
+++ b/app/src/main/res/layout/fragment_contact_list.xml
@@ -7,7 +7,7 @@
 
 	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
+		android:layout_height="688dp"
 		android:orientation="vertical"
 		tools:ignore="UselessParent">
 
@@ -26,7 +26,8 @@
 		<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
 			android:id="@+id/swipeRefreshLayout"
 			android:layout_width="match_parent"
-			android:layout_height="wrap_content">
+			android:layout_height="533dp"
+			android:layout_marginTop="10dp">
 
 			<androidx.recyclerview.widget.RecyclerView
 				android:id="@+id/recyclerView"
@@ -34,5 +35,17 @@
 				android:layout_height="wrap_content"
 				android:layout_marginTop="16dp" />
 		</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+		<Button
+			android:id="@+id/backbutton"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="10dp"
+			android:background="@drawable/color"
+			android:text="回到個人檔案"
+			android:textSize="20sp"
+			tools:ignore="HardcodedText" />
+
+
 	</LinearLayout>
 </FrameLayout>
