--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -170,7 +170,7 @@
 	<fragment
 		android:id="@+id/nav_contact_list"
 		android:name="com.example.myapplication.ui.emergency.contact_listFragment"
-		android:label="menu_contact_list"
+		android:label="@string/menu_contact_list"
 		tools:layout="@layout/fragment_contact_list" />
 	<fragment
 		android:id="@+id/nav_calender_thing_update"
