--- a/app/src/main/res/layout/fragment_calender_thing_update.xml
+++ b/app/src/main/res/layout/fragment_calender_thing_update.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
@@ -11,21 +12,23 @@
 		tools:context=".ui.Calender.CalenderThingUpdateFragment">
 
 		<TextView
-			android:id="@+id/textView_calender_thing_update"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
+			android:id="@+id/textView10"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
 			android:layout_marginEnd="28dp"
-			android:text="@string/calender_thing_update"
-			android:textSize="50sp"
-			app:layout_constraintEnd_toEndOf="parent"
-			tools:ignore="HardcodedText,MissingConstraints"/>
+			android:text="行事曆事件修改"
+			android:textSize="50dp"
+			tools:ignore="HardcodedText,MissingConstraints,SpUsage"
+			 />
 
 		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:layout_marginTop="60dp"
 			android:orientation="vertical"
 			android:padding="16dp"
-			app:layout_constraintTop_toBottomOf="@id/textView_calender_thing_update">
+			app:layout_constraintTop_toTopOf="parent"
+			tools:ignore="MissingConstraints">
 
 			<EditText
 				android:id="@+id/editText_thing"
@@ -33,8 +36,8 @@
 				android:layout_height="wrap_content"
 				android:layout_marginBottom="5dp"
 				android:hint="@string/thing_name"
-				android:textSize="20sp"
 				android:imeOptions="actionNext"
+				android:textSize="20sp"
 				tools:ignore="Autofill,TextFields" />
 
 			<!-- 選擇事件起始日期的彈跳視窗 -->
@@ -46,9 +49,8 @@
 				<TextView
 					android:layout_width="100dp"
 					android:layout_height="50dp"
-					android:textSize="20sp"
 					android:text="@string/start_day"
-					/>
+					android:textSize="20sp" />
 
 				<EditText
 					android:id="@+id/editTextStartDate"
@@ -70,24 +72,24 @@
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:orientation="horizontal">
+
 				<TextView
 					android:layout_width="100dp"
 					android:layout_height="50dp"
-					android:textSize="20sp"
 					android:text="@string/end_day"
-					/>
+					android:textSize="20sp" />
 
 				<EditText
 					android:id="@+id/editTextEndDate"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:layout_marginTop="8dp"
+					android:focusable="false"
 					android:hint="選擇的結束日期"
 					android:imeOptions="actionNext"
-					android:textSize="20sp"
 					android:inputType="none"
-					android:focusable="false"
 					android:onClick="showEndDatePickerDialog"
+					android:textSize="20sp"
 					tools:ignore="Autofill,HardcodedText,TextFields" />
 
 			</LinearLayout>
@@ -101,8 +103,8 @@
 				<TextView
 					android:layout_width="100dp"
 					android:layout_height="50dp"
-					android:textSize="20sp"
-					android:text="@string/start_time" />
+					android:text="@string/start_time"
+					android:textSize="20sp" />
 
 				<EditText
 					android:id="@+id/editTextStartTime"
@@ -115,7 +117,7 @@
 					android:inputType="none"
 					android:focusable="false"
 					android:onClick="showStartTimePickerDialog"
-					tools:ignore="Autofill,HardcodedText" />
+					tools:ignore="Autofill,HardcodedText"/>
 			</LinearLayout>
 
 			<!-- 選擇事件結束時間的彈跳視窗 -->
@@ -127,8 +129,8 @@
 				<TextView
 					android:layout_width="100dp"
 					android:layout_height="50dp"
-					android:textSize="20sp"
-					android:text="@string/end_time" />
+					android:text="@string/end_time"
+					android:textSize="20sp" />
 
 				<EditText
 					android:id="@+id/editTextEndTime"
@@ -141,7 +143,7 @@
 					android:inputType="none"
 					android:focusable="false"
 					android:onClick="showEndTimePickerDialog"
-					tools:ignore="Autofill,HardcodedText" />
+					tools:ignore="Autofill,HardcodedText"  />
 
 			</LinearLayout>
 
@@ -154,8 +156,8 @@
 				<TextView
 					android:layout_width="100dp"
 					android:layout_height="40dp"
-					android:textSize="20sp"
-					android:text="@string/thing_people" />
+					android:text="@string/thing_people"
+					android:textSize="20sp" />
 
 				<Spinner
 					android:id="@+id/spinnerCompanions"
@@ -170,24 +172,24 @@
 				android:layout_height="wrap_content"
 				android:layout_marginTop="8dp"
 				android:layout_marginBottom="8dp"
-				android:textSize="20sp"
-				android:imeOptions="actionDone"
 				android:hint="@string/thing_illustrate"
+				android:imeOptions="actionDone"
+				android:textSize="20sp"
 				tools:ignore="Autofill,TextFields" />
 
 			<Button
 				android:id="@+id/saveButton"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:textSize="20sp"
-				android:text="@string/thing_update_save" />
+				android:text="@string/thing_update_save"
+				android:textSize="20sp" />
 
 			<Button
 				android:id="@+id/no_save_button"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:textSize="20sp"
 				android:text="@string/delete"
+				android:textSize="20sp"
 				tools:ignore="HardcodedText" />
 
 		</LinearLayout>
