--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -171,10 +171,19 @@
 		android:id="@+id/nav_contact_list"
 		android:name="com.example.myapplication.ui.emergency.contact_listFragment"
 		android:label="@string/menu_contact_list"
-		tools:layout="@layout/fragment_contact_list" />
+		tools:layout="@layout/fragment_contact_list" >
+		<action
+			android:id="@+id/nav_contact_update"
+			app:destination="@id/contact_updateFragment" />
+	</fragment>
 	<fragment
 		android:id="@+id/nav_calender_thing_update"
 		android:name="com.example.myapplication.ui.Calender.CalenderThingUpdateFragment"
 		android:label="@string/menu_calender_thing_update"
 		tools:layout="@layout/fragment_calender_thing_update" />
+	<fragment
+		android:id="@+id/contact_updateFragment"
+		android:name="com.example.myapplication.ui.emergency.Contact_updateFragment"
+		android:label="@string/menu_contact_update"
+		tools:layout="@layout/fragment_contact_update" />
 </navigation>
