--- a/app/src/main/res/layout/fragment_user_data.xml
+++ b/app/src/main/res/layout/fragment_user_data.xml
@@ -44,7 +44,7 @@
 				android:orientation="horizontal">
 
 				<TextView
-					android:id="@+id/textViewUsername"
+					android:id="@+id/textViewName"
 					android:layout_width="130dp"
 					android:layout_height="wrap_content"
 					android:textSize="20sp"
@@ -52,7 +52,7 @@
 					tools:ignore="HardcodedText" />
 
 				<EditText
-					android:id="@+id/editTextUsername"
+					android:id="@+id/editTextName"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:textSize="20sp"
@@ -69,7 +69,7 @@
 				android:orientation="horizontal">
 
 				<TextView
-					android:id="@+id/textViewEmail"
+					android:id="@+id/textViewMail"
 					android:layout_width="130dp"
 					android:layout_height="wrap_content"
 					android:textSize="20sp"
@@ -77,7 +77,7 @@
 					tools:ignore="HardcodedText" />
 
 				<EditText
-					android:id="@+id/editTextEmail"
+					android:id="@+id/editTextMail"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:textSize="20sp"
@@ -94,7 +94,7 @@
 				android:orientation="horizontal">
 
 				<TextView
-					android:id="@+id/textViewPhone"
+					android:id="@+id/textViewTel"
 					android:layout_width="130dp"
 					android:layout_height="wrap_content"
 					android:text="電話號碼"
@@ -102,7 +102,7 @@
 					tools:ignore="HardcodedText" />
 
 				<EditText
-					android:id="@+id/editTextPhone"
+					android:id="@+id/editTextTel"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:textSize="20sp"
