20240621-藥物查詢成功顯示

--- a/app/src/main/res/values/medicine_license_numbers.xml
+++ b/app/src/main/res/values/medicine_license_numbers.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="license_numbers">medicine_license_numbers
+	    <item>請選擇證別</item>
         <item>衛署藥製</item>
         <item>衛部藥製</item>
         <item>衛署藥輸</item>
