--- a/app/src/main/res/layout/fragment_password_change.xml
+++ b/app/src/main/res/layout/fragment_password_change.xml
@@ -51,31 +51,31 @@
 			android:padding="12dp"
 			android:layout_marginBottom="24dp" />
 
-			<LinearLayout
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:orientation="horizontal">
+		<LinearLayout
+			android:layout_width="350dp"
+			android:layout_height="109dp"
+			android:orientation="horizontal">
 
-				<!-- 確定修改按鈕 -->
-				<Button
-					android:id="@+id/btn_confirm_change"
-					android:layout_width="170dp"
-					android:layout_height="wrap_content"
-					android:background="@drawable/color"
-					android:layout_marginBottom="16dp"
-					android:padding="12dp"
-					android:text="確定修改"
-					android:textColor="@android:color/white" />
-				<!-- 提交按鈕 -->
-				<Button
-					android:id="@+id/btn_submit"
-					android:layout_width="170dp"
-					android:layout_height="wrap_content"
-					android:background="@drawable/color"
-					android:padding="12dp"
-					android:text="提交"
-					android:textColor="@android:color/white" />
-			</LinearLayout>
+			<!-- 確定修改按鈕 -->
+			<Button
+				android:id="@+id/btn_confirm_change"
+				android:layout_width="170dp"
+				android:layout_height="wrap_content"
+				android:layout_marginBottom="16dp"
+				android:background="@drawable/color"
+				android:padding="12dp"
+				android:text="確定修改"
+				android:textColor="@android:color/white" />
+			<!-- 取消按鈕 -->
+			<Button
+				android:id="@+id/btn_submit"
+				android:layout_width="170dp"
+				android:layout_height="wrap_content"
+				android:background="@drawable/color"
+				android:padding="12dp"
+				android:text="取消"
+				android:textColor="@android:color/white" />
+		</LinearLayout>
 
 
 	</LinearLayout>
