--- a/app/src/main/res/layout/medicine_detail_dialog.xml
+++ b/app/src/main/res/layout/medicine_detail_dialog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:orientation="vertical"
@@ -10,19 +11,20 @@
 
 	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
+		android:layout_height="wrap_content"
 		android:orientation="horizontal">
 
 		<TextView
-			android:layout_width="154dp"
+			android:layout_width="132dp"
 			android:layout_height="wrap_content"
 			android:text="選擇用藥時間:"
 			android:textColor="@android:color/black"
-			android:textSize="16sp" />
+			android:textSize="16sp"
+			tools:ignore="HardcodedText" />
 
 		<Spinner
 			android:id="@+id/timeSpinner"
-			android:layout_width="266dp"
+			android:layout_width="247dp"
 			android:layout_height="wrap_content" />
 	</LinearLayout>
 
@@ -36,14 +38,16 @@
 			android:layout_height="wrap_content"
 			android:text="請填寫一次吃幾顆:"
 			android:textColor="@android:color/black"
-			android:textSize="16sp" />
+			android:textSize="16sp"
+			tools:ignore="HardcodedText" />
 
 		<EditText
 			android:id="@+id/dosageEditText"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:hint="輸入數量"
-			android:inputType="number" />
+			android:inputType="number"
+			tools:ignore="Autofill,HardcodedText" />
 	</LinearLayout>
 
 	<!-- Dosage input -->
