--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
 	<color name="light_blue_A400">#FF00B0FF</color>
 	<color name="black_overlay">#66000000</color>
 	<color name="highlight_color">#FFEB3B</color>
+	<color name="textColorPrimary">#000000</color>
+
 </resources>
