--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,19 @@
 <resources>
-
-	<style name="Widget.Theme.MyApplication.ButtonBar.Fullscreen" parent="">
-		<item name="android:background">@color/black_overlay</item>
-		<item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>
+	<!-- Base application theme. -->
+	<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+		<!-- Customize your theme here. -->
+		<item name="colorPrimary">@color/colorPrimary</item>
+		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+		<item name="colorAccent">@color/colorAccent</item>
 	</style>
+
+	<style name="AppTheme.Night" parent="Theme.AppCompat.DayNight.DarkActionBar">
+		<item name="colorPrimary">@color/colorPrimary</item>
+		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+		<item name="colorAccent">@color/colorAccent</item>
+	</style>
+
+	<color name="colorPrimary">#03A9F4</color>
+	<color name="colorPrimaryDark">#3F51B5</color>
+	<color name="colorAccent">#FFEB3B</color>
 </resources>
