20240621-藥物全功能成功執行(抓取顯示更新刪除加到藥物庫)

--- a/app/src/main/res/layout/medicine_detail_dialog.xml
+++ b/app/src/main/res/layout/medicine_detail_dialog.xml
@@ -15,7 +15,7 @@
 		android:orientation="horizontal">
 
 		<TextView
-			android:layout_width="132dp"
+			android:layout_width="140dp"
 			android:layout_height="wrap_content"
 			android:text="選擇用藥時間:"
 			android:textColor="@android:color/black"
@@ -24,8 +24,9 @@
 
 		<Spinner
 			android:id="@+id/timeSpinner"
-			android:layout_width="247dp"
-			android:layout_height="wrap_content" />
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:entries="@array/time_options"/>
 	</LinearLayout>
 
 	<LinearLayout
