--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -5,39 +5,12 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".ui.Video.VideoFragment">
+	tools:context=".ui.Memory.VideoFragment">
 
-	<androidx.camera.view.PreviewView
-		android:id="@+id/previewView"
-		android:layout_width="0dp"
-		android:layout_height="0dp"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
-
-	<ImageButton
-		android:id="@+id/captureButton"
-		android:layout_width="60dp"
-		android:layout_height="60dp"
-		android:layout_margin="20dp"
-		android:icon="@android:drawable/presence_invisible"
-		android:contentDescription="@string/capture_button"
-		android:padding="16dp"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent" />
-
-	<ImageView
-		android:id="@+id/thumbnailView"
-		android:layout_width="64dp"
-		android:layout_height="64dp"
-		android:layout_margin="16dp"
-		android:contentDescription="@string/thumbnail_view"
-		android:scaleType="centerCrop"
-		android:icon="@android:drawable/ic_menu_gallery"
-		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintEnd_toEndOf="parent"
-		android:layout_marginTop="16dp"
-		android:layout_marginEnd="16dp"/>
+	<com.google.android.exoplayer2.ui.PlayerView
+		android:id="@+id/video_view"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		app:show_buffering="when_playing"
+		app:use_controller="true" />
 </androidx.constraintlayout.widget.ConstraintLayout>
