20240622-跌倒資料顯示

--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	tools:context=".ui.Memory.VideoFragment">
+	android:layout_height="match_parent">
 
-	<com.google.android.exoplayer2.ui.PlayerView
-		android:id="@+id/video_view"
+	<SurfaceView
+		android:id="@+id/surfaceView"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		app:show_buffering="when_playing"
-		app:use_controller="true" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+		android:layout_height="match_parent" />
+
+</RelativeLayout>
