--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -70,7 +70,7 @@
         tools:layout="@layout/fragment_memory" >
 	    <action
 		    android:id="@+id/nav_video"
-		    app:destination="@id/videoFragment2" />
+		    app:destination="@id/nav_video" />
     </fragment>
     <fragment
         android:id="@+id/nav_calender"
@@ -157,7 +157,7 @@
 		android:label="@string/menu_forget_password"
 		tools:layout="@layout/fragment_forget_password" />
 	<fragment
-		android:id="@+id/videoFragment2"
+		android:id="@+id/nav_video"
 		android:name="com.example.myapplication.ui.Memory.VideoFragment"
 		android:label="@string/menu_video"
 		tools:layout="@layout/fragment_video" />
